@@ -24,6 +24,9 @@
 - Event configuration improved
 - New MIBs added: BGP4, PowerNet (APC), PRINTER,
   Synoptics (now part of Nortel Networks), UPS
+- Windows console:
+	- Improved handling of large number of objects
+	- Status and configuration poll windows improved
 - Fixed issues: #12, #46, #48, #49, #50, #51, #54
 
 
